# rp2350-touch-lcd-2-rust-examples

./: Cargo.toml  README.md
examples/: mipidsi.rs  touch.rs
src/: main.rs
