[package]
name = "rp2350-touch-lcd-2-rust-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"

embedded-hal = "1.0.0"
rp235x-hal = { git = "https://github.com/rp-rs/rp-hal", version = "0.2.0", features = [
  "binary-info",
  "critical-section-impl",
  "rt",
  "defmt",
] }
panic-halt = "0.2.0"
rp-binary-info = "0.1.0"
panic-probe = "1.0.0"


[dev-dependencies]
cst816s = "1.0.1"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-hal-bus = "0.3.0"
embedded-text = "0.7.2"
mipidsi = "0.8.0"
tinybmp = "0.6.0"

